# BomberMan

./: .gitignore  README.md  READMEEnglish.md  READMEFrench.md
CLION/: BattleForMidguard.depend  BattleForMidguard.layout  Bomberman.rc  CMakeLists.txt  README installation SDL pour CodeBlocks.txt  installation SDL pour CodeBlocks.txt  readme.md
CLION/libsSDL/SDL-1.2.15/docs/html/: guideinput.html
CLION/my_bfm_img/bomb_explosions/: explo_extend_vert.psd
CLION/ressources/: stdout.txt
CLION/src/: Engine.c  attacks.c  bfm.h  bombes.c  creature_order.c  display_annim.c  drawer.c  game.c  heroes_images.c  init_sdl.c  main.c  map.c  merchant.c  mobs_attacks.c  order.c  out_of_battle.c  random_catch.c  socket.c  team.c
CLION/src/lib/: CMakeLists.txt  lib.h  my_getnbr.c  my_put_nbr.c  my_putchar.c  my_rand.c  my_strcat.c  my_string.c  readline.c
installateur/linux/: bombermanetnaadrien.deb
installateur/linux/bombermanetnaadrien/DEBIAN/: control  control~
installateur/windows/: Generate-AppxMsi.ps1  SuperBomberman2.msi  SuperBomberman2.wixobj  SuperBomberman2.wixpdb  Template.wxs
installateur/windows/game/: stdout.txt
socketTest/: CMakeLists.txt  main.c
socketTest/socket-server/: CMakeLists.txt  main.c
socketTest/socket_client/: README.md  main.c
sprites/: specs.txt
